3.4
	+ Added a left-right composite layout
	+ Search and pagination forms can be omitted using showFilterForm
	  and showPaginationForm properties
	+ Show nice error when global-action fails using die + scalar
	+ EBox::Util::Random now accepts a set of chars to have a random string
	+ Notify HA when a module which must have a single instance in the
	  cluster is enabled/disabled.
	+ Added enabled action to /etc/init.d/zentyal to display whether a
	  module is enabled or disabled
	+ Pass model, type and id to enabled subroutine in
	  EBox::Types::MultiStateAction to be ortoghonal to handler property
	+ Fixed JS error on showing errors in customActionClicked
	+ Fixed rethrown of exception in restartService() method
	+ Added middleware to have auth based on a env variable
	+ Updated nginx to server static files directly always so apache shouldn't
	  ever get this kind of requests
	+ Use uWSGI instead of Apache mod_perl for running CGIs
	+ Updated automatic bug report URL to new bug report endpoint.
	+ Give support to custom actions without image. Those actions will
	  not appear in the legend.
	+ Added to findValueMultipleFields and findValue the nosync parameter
	+ Added support for haproxy 1.5
	+ Moved nginx to listen on localhost
	+ Integration with HA module in save changes process
	+ Added icon for new zentyal-ha module
	+ Migrate rs_verify_servers in remoteservices.conf to
	  rest_verify_servers core.conf
	+ Include basic support to free-format Template models to be
	  included in Composites
	+ Move run-pending-ops script from remoteservices to core
	+ Rename EBox::RemoteServices::RESTResult to EBox::RESTClient::Result
	+ Move EBox::RemoteServices::RESTClient to EBox::RESTClient as it
	  is used in ha and remoteservices module.
	+ Adapt init.d and upstart running checks to Ubuntu 13.10
	+ Use service instead of deprecated invoke-rc.d for init.d scripts
	+ Adapted apache configuration to 2.4
	+ Adapted EBox::Config::Redis to the new libredis-perl API